RESOLVED FIXED217387
MediaRecorder::create should not need to create a MediaRecorderPrivate to validate it can record properly
https://bugs.webkit.org/show_bug.cgi?id=217387
Summary MediaRecorder::create should not need to create a MediaRecorderPrivate to val...
youenn fablet
Reported 2020-10-06 08:35:48 PDT
MediaRecorder::create should not need to create a MediaRecorderPrivate to validate it can record properly
Attachments
Patch (6.13 KB, patch)
2020-10-07 03:15 PDT, youenn fablet
no flags
Test expectation update (1.75 KB, patch)
2020-10-07 09:08 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-10-07 03:15:05 PDT
EWS
Comment 2 2020-10-07 08:48:41 PDT
Committed r268125: <https://trac.webkit.org/changeset/268125> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410741 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-07 08:49:18 PDT
youenn fablet
Comment 4 2020-10-07 09:06:01 PDT
A rebase of imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-detached-context.html is needed. Test is not passing yet but we should wait for https://github.com/w3c/mediacapture-record/issues/206 resolution.
youenn fablet
Comment 5 2020-10-07 09:08:54 PDT
Reopening to attach new patch.
youenn fablet
Comment 6 2020-10-07 09:08:58 PDT
Created attachment 410752 [details] Test expectation update
EWS
Comment 7 2020-10-07 09:40:01 PDT
Committed r268129: <https://trac.webkit.org/changeset/268129> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410752 [details].
Eric Carlson
Comment 8 2020-10-07 09:51:34 PDT
Comment on attachment 410741 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=410741&action=review > Source/WebCore/ChangeLog:11 > + Remove assertion that we can create a private recorder in start since thgere is no guarantee that the frame might not be detached. s/thgere/there/
Note You need to log in before you can comment on or make changes to this bug.