MediaRecorder::create should not need to create a MediaRecorderPrivate to validate it can record properly https://bugs.webkit.org/show_bug.cgi?id=217387

Reviewed by Darin Adler.

Source/WebCore:

Instead of creating a MediaRecorderPrivate to verify that we can create one, just rely on isTypeSupported.
Add a check that page is not null in the create method.

Remove assertion that we can create a private recorder in start since thgere is no guarantee that the frame might not be detached.

Test: http/wpt/mediarecorder/MediaRecorder-frame.html

* Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::create):
(WebCore::MediaRecorder::createMediaRecorderPrivate):
(WebCore::MediaRecorder::startRecording):

LayoutTests:

* http/wpt/mediarecorder/MediaRecorder-frame-expected.txt: Added.
* http/wpt/mediarecorder/MediaRecorder-frame.html: Added.


Canonical link: https://commits.webkit.org/230194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268125 268f45cc-cd09-0410-ab3c-d52691b4dbfc